--- a/style.css
+++ b/style.css
@@ -11,8 +11,12 @@ body {
   width: 30vw;
   flex-direction: column;
   height: 100vh;
-  text-align: center;
+  align-items: center;
   position: fixed;
+}
+
+.profile {
+  margin-bottom: 30px;
 }
 
 .links {
@@ -35,7 +39,8 @@ body {
 }
 
 .skill {
-  background-color: blue;
+  padding: 2px;
+  width: fit-content;
 }
 
 .skills {
@@ -48,23 +53,66 @@ body {
   grid-column-start: 2;
 }
 
+.contact-links {
+  display: flex;
+  flex-direction: column;
+}
+
 @media (max-width: 800px) {
   body {
     grid-template-columns: 1fr;
-    grid-template-rows: 20vh auto;
+    grid-template-rows: 15vh auto;
   }
   .nav {
     flex-direction: row;
-    min-height: 80px;
-    height: 20vh;
+    height: 15vh;
     min-width: 100vw;
     align-items: center;
     padding: 10px;
   }
   .links {
     flex-direction: row;
-    width: 70%;
+    width: 60%;
     justify-content: space-around;
     align-items:center;
   }
+  .content {
+    grid-row-start: 2;
+  }
+  .profile {
+    margin-bottom: 0px;
+    width: 50px;
+    height: 50px;
+    padding-left: 10px;
+  }
+  .nav-header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  #about:before {
+    content: "";
+    display: block;
+    height: 15vh;
+    margin: -15vh 0 0;
+  }
+  #projects:before {
+    content: "";
+    display: block;
+    height: 15vh;
+    margin: -15vh 0 0;
+  }
+  #skills:before {
+    content: "";
+    display: block;
+    height: 15vh;
+    margin: -15vh 0 0;
+  }
+  #contact:before {
+    content: "";
+    display: block;
+    height: 15vh;
+    margin: -15vh 0 0;
+  }
+
 }
