--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ body {
     min-width: 100vw;
     align-items: center;
     padding: 10px;
+    justify-content: space-around;
   }
   .links {
     flex-direction: row;
@@ -114,5 +115,18 @@ body {
     height: 15vh;
     margin: -15vh 0 0;
   }
+}
 
+@media (max-width: 670px) {
+  .links {
+    flex-direction: column;
+    font-size: .9rem;
+    align-items:center;
+    width: auto;
+    max-height: 15vh;
+  }
+  .nav {
+    display: flex;
+    justify-content: space-around;
+  }
 }
