--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 .nav {
-  background: #9575cd;
+  background: rgb(149, 117, 205);
   display: flex;
   width: 30vw;
   flex-direction: column;
@@ -28,9 +28,14 @@ body {
 
 .links > a {
   text-decoration: none;
+  color: rgba(149, 117, 205, .7)
 }
 
 .links > a:hover {
+  color: white;
+}
+
+.links > a:visited {
   color: white;
 }
 
@@ -43,7 +48,7 @@ body {
   width: fit-content;
 }
 
-.skills {
+.skill-category {
   display: flex;
   flex-direction: column;
 }
