--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   grid-template-columns: 30vw auto;
   margin: 0;
   font-family: Tahoma, sans-serif;
+  background-color: #f4f1fa;
 }
 
 .nav {
@@ -13,6 +14,22 @@ body {
   height: 100vh;
   align-items: center;
   position: fixed;
+}
+
+p {
+  line-height: 1.4rem;
+}
+
+.about > p {
+  padding-left: 20px;
+}
+
+.nav h1 {
+  color: white
+}
+
+.content h1 {
+  color: #4a3a66;
 }
 
 .profile {
@@ -51,16 +68,22 @@ body {
 .skill-category {
   display: flex;
   flex-direction: column;
+  padding-left: 20px;
 }
 
 .content {
-  padding: 10px;
+  padding: 20px;
   grid-column-start: 2;
+  padding-left: 30px;
 }
 
 .contact-links {
   display: flex;
   flex-direction: column;
+}
+
+.project {
+  padding-left: 20px;
 }
 
 @media (max-width: 800px) {
@@ -128,7 +151,7 @@ body {
     font-size: .9rem;
     align-items:center;
     width: auto;
-    max-height: 15vh;
+    height: 15vh;
   }
   .nav {
     display: flex;
