--- a/style.css
+++ b/style.css
@@ -16,6 +16,22 @@ body {
   position: fixed;
 }
 
+.contact-icons {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: row;
+}
+
+.contact-icons > a {
+  margin: 5px;
+}
+
+.nav-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 p {
   line-height: 1.4rem;
 }
@@ -25,7 +41,8 @@ p {
 }
 
 .nav h1 {
-  color: white
+  color: white;
+  font-size: 40px;
 }
 .profile {
   margin-bottom: 30px;
@@ -34,8 +51,8 @@ p {
 .links {
   display: flex;
   flex-direction: column;
-  text-align: right;
-  font-size: 1.5rem;
+  text-align: left;
+  font-size: 2.1rem;
 }
 
 .links > a {
@@ -110,24 +127,39 @@ p {
 
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
   body {
     grid-template-columns: 1fr;
     grid-template-rows: 15vh auto;
   }
   .nav {
-    flex-direction: row;
+    display: grid;
     height: 15vh;
     min-width: 100vw;
-    align-items: center;
     padding: 10px;
-    justify-content: space-around;
+    grid-template-rows: 2fr 1fr;
+  }
+  .nav-content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
   }
   .links {
     flex-direction: row;
-    width: 60%;
-    justify-content: space-around;
-    align-items:center;
+    padding-left: 10px;
+  }
+  .contact-icons {
+    display: flex;
+    justify-content: flex-end;
+    margin: 0px;
+    margin-right: 20px;
+  }
+  .contact-icons > a > img {
+    width: 20px;
+    height: 20px;
+  }
+  .links > a {
+    font-size: 25px;
   }
   .content {
     grid-row-start: 2;
@@ -169,13 +201,16 @@ p {
   }
 }
 
-@media (max-width: 670px) {
+@media (max-width: 700px) {
   .links {
     flex-direction: column;
     font-size: .9rem;
     align-items:center;
     width: auto;
     height: 15vh;
+  }
+  .links > a {
+    font-size: 15px;
   }
   .nav {
     display: flex;
