--- a/style.css
+++ b/style.css
@@ -7,13 +7,14 @@ body {
 }
 
 .nav {
-  background: #ad1457;
   display: flex;
   width: 30vw;
   flex-direction: column;
   height: 100vh;
   align-items: center;
   position: fixed;
+  background: url('sf.jpeg');
+  box-shadow: inset 0 0 0 1000px rgba(173, 20, 87, .2)
 }
 
 .contact-icons {
